Fixed filter styling (wrap)

--- a/src/screens/PartsAlt/index.css
+++ b/src/screens/PartsAlt/index.css
@@ -14,10 +14,11 @@
   padding-bottom: 10px;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .parts_alt_filters > div {
-  margin: 0 20px;
+  margin: 10px 20px;
 }
 
 .parts_alt_pagination {
